--- a/index.html
+++ b/index.html
@@ -64,5 +64,50 @@
         </div>
 
     </section>
+
+    <section class="section-2">
+
+        <div class="section-2-grid">
+
+            <div class="box-1"></div>
+
+            <div class="box-2"></div>
+
+            <div class="box-3"></div>
+
+            <div class="box-4"></div>
+
+        </div>
+
+        <div class="section-2-texts">
+
+            <h2>About Us</h2>
+
+            <b>Myresfeber is a leading city & entertainment guide filled with handpicked <br>
+            recommendations of what to do in your city, explore hidden gems and be the first to <br>
+            get the latest buzz!</b>
+
+            <p> We consist of a constantly growing community of local experts showcasing a range <br>
+                of curated content around events, food, shopping, fashion, sightseeing, local <br>
+                communities, travel and so much more!We'll help you make your weekend plans, <br>
+                inform you about the best events happening all around the world, tell you all about <br> 
+                the best places to eat in the city and much much more. Here's a little taste of the <br>
+                plethora of features we offer -You will happily receive expert recommendations <br> 
+                tailor-made to suit your interests. We'll be providing you with city-specific stories <br> 
+                and videos, handy local information - all right on your smartphone, ready to be <br> 
+                scrolled through!We'll be updating and pushing through fresh content every few <br> 
+                hours, giving you more than enough time to scan through and make plans to explore <br>
+                your city.You can also like, share and bookmark all your favorite articles and blurbs, <br> 
+                and store them ready for future lookups!We pride ourselves on being one of the <br> 
+                fastest-loading apps out there today so that you'll have a seamless browsing <br> 
+                experience.With all this and more, all fresh and ready for you guys, this is one <br> 
+                platform that'll become your lifeline to navigate all corners of your city. Explore <br> 
+                away!
+            </p>
+
+        </div>
+
+    </section>
+
 </body>
 </html>
