--- a/index.html
+++ b/index.html
@@ -109,5 +109,75 @@
 
     </section>
 
+    <section class="section-3">
+
+        <div class="section-3-texts">
+
+            <h1>How does this App Work?</h1>
+
+            <div class="box">
+
+                <div class="radius">
+                    <img src="/assets/icons/ant-design_user-outlined.svg">
+                </div>
+
+                <div class="box-text">
+
+                    <h3>Make a profile</h3>
+                    <p>Myresfeber is a leading city & entertainment guide <br> 
+                    filled with handpicked recommendations of what to <br> 
+                    do in your city, explore hidden gems and be the first to <br> 
+                    get the latest buzz!</p>
+
+                </div>
+
+            </div>
+
+            <div class="box">
+
+                <div class="radius">
+                    <img src="/assets/icons/akar-icons_download.svg">
+                </div>
+
+                <div class="box-text">
+
+                    <h3>Make a profile</h3>
+                    <p>Myresfeber is a leading city & entertainment guide <br> 
+                    filled with handpicked recommendations of what to <br> 
+                    do in your city, explore hidden gems and be the first to <br> 
+                    get the latest buzz!</p>
+                    
+                </div>
+
+            </div>
+
+            <div class="box">
+
+                <div class="radius">
+                    <img src="/assets/icons/bi_shield-check.svg">
+                </div>
+
+                <div class="box-text">
+
+                    <h3>Make a profile</h3>
+                    <p>Myresfeber is a leading city & entertainment guide <br> 
+                    filled with handpicked recommendations of what to <br> 
+                    do in your city, explore hidden gems and be the first to <br> 
+                    get the latest buzz!</p>
+                    
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="img-con-3">
+
+            <img src="/assets/images/mockup.svg">
+
+        </div>
+
+    </section>
+
 </body>
 </html>
