--- a/index.html
+++ b/index.html
@@ -179,5 +179,21 @@
 
     </section>
 
+    <section class="section-4">
+
+        <h1>Screenshots</h1>
+
+        <div class="images-section-4">
+
+            <img src="/assets/icons/Left Arrow.svg">
+            <img src="/assets/icons/iPhone X-2.png">
+            <img src="/assets/images/iPhone X.png">
+            <img src="/assets/images/Screen.png">
+            <img src="/assets/icons/Right Arrow.svg">
+
+        </div>
+
+    </section>
+
 </body>
 </html>
