--- a/index.html
+++ b/index.html
@@ -195,5 +195,88 @@
 
     </section>
 
+    <section class="section-5">
+
+        <h1>Our Clients Speak</h1>
+        <p>We have been working with clients around the world</p>
+
+        <div class="boxes-section-5">
+
+            <div class="box-con">
+
+                <div class="boxs">
+
+                    <h2>Efficient Collaborating</h2>
+
+                    <p>Had really great experience with myresfeber, <br> 
+                    service is really good and everything is just <br> 
+                    awesome. Great recommendations and <br> 
+                    bookings were available at a discounted price. <br> 
+                    Awesome! </p>
+
+                </div>
+
+                <div class="box-con-clint">
+
+                    <img src="/assets/images/Picture.png">
+                    <h2>Jane Cooper</h2>
+                    <p>CEO at ABC Corporation</p>
+
+                </div>
+
+            </div>
+
+            <div class="box-con">
+
+                <div class="boxs">
+
+                    <h2>Intuitive Design</h2>
+
+                    <p>Had really great experience with myresfeber, <br> 
+                    service is really good and everything is just <br> 
+                    awesome. Great recommendations and <br> 
+                    bookings were available at a discounted price. <br> 
+                    Awesome! </p>
+
+                </div>
+
+                <div class="box-con-clint">
+
+                    <img src="/assets/images/Picture.png">
+                    <h2>Jane Cooper</h2>
+                    <p>CEO at ABC Corporation</p>
+
+                </div>
+
+            </div>
+
+            <div class="box-con">
+
+                <div class="boxs">
+
+                    <h2>Mindblowing Service</h2>
+
+                    <p>Had really great experience with myresfeber, <br> 
+                    service is really good and everything is just <br> 
+                    awesome. Great recommendations and <br> 
+                    bookings were available at a discounted price. <br> 
+                    Awesome! </p>
+
+                </div>
+
+                <div class="box-con-clint">
+
+                    <img src="/assets/images/Picture.png">
+                    <h2>Jane Cooper</h2>
+                    <p>CEO at ABC Corporation</p>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+
 </body>
 </html>
